fix header z-index

--- a/src/index.scss
+++ b/src/index.scss
@@ -61,7 +61,7 @@
   --missing-avatar-text: #FFFFFF;
 
   --z-index-lifted: 10;
-  --z-index-header: 20;
+  --z-index-header: 25;
   --z-index-floater: 30;
   --z-index-floater-2: 32;
   --z-index-overlay: 40;
